# ml_uncertainty

./: .flake8  .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: authors.md  conf.py  contributing.md  feature_ideas.md  history.md  history.rst  installation.md  make.bat  readme.md  usage.rst
examples/: __init__.py  ensemble_model.ipynb  ensemble_model.py  error_propagation.ipynb  error_propagation.py  fourier_basis.ipynb  linear_regression.ipynb  linear_regression.py  non_linear_regression_arrhenius.ipynb  non_linear_regression_arrhenius.py  non_linear_regression_quadratic.ipynb  non_linear_regression_quadratic.py  parametric_model.ipynb  parametric_model.py  random_forest_non-normal_distribution.ipynb  random_forest_non-normal_distribution.py  spline_synthetic_data.ipynb  spline_wage_data.ipynb  weighted_non_linear_regression_arrhenius.ipynb  weighted_non_linear_regression_arrhenius.py
ml_uncertainty/: __init__.py  cli.py
ml_uncertainty-0.1.0/: AUTHORS.rst  HISTORY.rst  PKG-INFO  setup.cfg
tests/: arrhenius_model.py  test_benchmark_ensemble_model_inference.py  test_benchmark_sm_ols.py  test_benchmark_sm_wls.py  test_benchmark_statsmodels.py  test_ensemble_model_edge_cases.py  test_ensemble_model_feature_importance.py  test_ensemble_model_inference.py  test_error_propagation.py  test_ml_uncertainty.py  (+3 more)
(+57 files in other folders)
